--- a/app/src/main/res/values-it/strings_contact.xml
+++ b/app/src/main/res/values-it/strings_contact.xml
@@ -6,32 +6,28 @@
 
     <string name="contact_body">Caro sviluppatore di Printoid,\n\n
     Di seguito è la mia configurazione:\n\n
-    - Device model: %1$s\n
-    - Android version: %2$s\n
-    - Fingerprint: %3$s\n
-    - 3D Printer: %4$s\n\n
-    - OctoPrint version: %5$s\n\n
-    My message:\n\n\n\n
-    %6$s\n\n\n\n
+    - Device model:\n\u0020\u0020\u0020\u0020\u0020[%1$s]\n
+    - Android version:\n\u0020\u0020\u0020\u0020\u0020[%2$s]\n
+    - Fingerprint:\n\u0020\u0020\u0020\u0020\u0020[%3$s]\n
+    - 3D Printer:\n\u0020\u0020\u0020\u0020\u0020[%4$s]\n
+    - OctoPrint version:\n\u0020\u0020\u0020\u0020\u0020[%5$s]\n\n
+    My message:\n\n\n
+    %6$s\n\n\n
     Best regards</string>
-
-    <string name="alert_contact_title">Contatta lo sviluppatore</string>
-
-    <string name="alert_contact_email_msg">\nPrima di contattare lo sviluppatore, sei sicuro che:\n\n
-    - Printoid è aggiornato ?\n
-    - Hai letto di nuovo le guide?\n
-    - Hai cercato nelle Domande frequenti(F.A.Q.)?\n
-    - Sarai educato e corteses?\n\n
-    Se non rispetti queste condizioni, lo sviluppatore <b>non sarò in grado</b> di aiutarti al meglio.</string>
-
-    <string name="alert_contact_traces_msg">Prima di inviare i log allo sviluppatore, sei sicuro che:\n
-    - Printoid è aggiornato ?\n
-    - Hai letto di nuovo le guide?\n
-    - Hai cercato nelle Domande frequenti(F.A.Q.)?\n
-    - Sarai educato e corteses?\n\n
-    Se non rispetti queste condizioni, lo sviluppatore <b>non sarò in grado</b> di aiutarti al meglio.</string>
 
     <string name="alert_contact_tutorials_label">Guide</string>
     <string name="alert_contact_faq_label">F.A.Q.</string>
+
+    <string name="alert_contact_title">Contatta lo sviluppatore</string>
+
+    <string name="contact_conditions_title">Before contacting the developer, please ensure that:</string>
+    <string name="contact_condition_1">Printoid is up-to-date</string>
+    <string name="contact_condition_2">OctoPrint is up-to-date</string>
+    <string name="contact_condition_3">I have read the tutorials</string>
+    <string name="contact_condition_4">I have read the Frequently Asked Questions (F.A.Q.)</string>
+    <string name="contact_condition_5">I will be polite and courteous</string>
+
+    <string name="contact_form_title">Please write your message to Anthony, the developer of Printoid:</string>
+    <string name="contact_form_hint">Hello, I want to tell you that…</string>
 
 </resources>
