--- a/app/src/main/res/values-nl/strings_contact.xml
+++ b/app/src/main/res/values-nl/strings_contact.xml
@@ -6,33 +6,28 @@
 
     <string name="contact_body">Beste Printoid ontwikkelaar,\n\n
     Hier is mijn configuratie :\n\n
-    - Tablet/telefoon: %1$s\n
-    - Versie van Android: %2$s\n
-    - Fingerprint: %3$s\n
-    - 3D printer: %4$s\n\n
-    - Versie van OctoPrint: %5$s\n\n
-    Mijn bericht:\n\n\n\n
-    %6$s\n\n\n\n
+    - Tablet/telefoon:\n\u0020\u0020\u0020\u0020\u0020[%1$s]\n
+    - Versie van Android:\n\u0020\u0020\u0020\u0020\u0020[%2$s]\n
+    - Fingerprint:\n\u0020\u0020\u0020\u0020\u0020[%3$s]\n
+    - 3D printer:\n\u0020\u0020\u0020\u0020\u0020[%4$s]\n
+    - Versie van OctoPrint:\n\u0020\u0020\u0020\u0020\u0020[%5$s]\n\n
+    Mijn bericht:\n\n\n
+    %6$s\n\n\n
     met vriendelijke groet</string>
-
-    <string name="alert_contact_title">Neem contact op met de ontwikkelaar</string>
-
-    <string name="alert_contact_email_msg">\nVoordat u contact op neemt: weet u zeker dat:\n\n
-    - U de laatste versie van Printoid gebruikt?\n
-    - Heb je de tutorials opnieuw bekeken?\n
-    - Heeft u de veelgestelde vragen geraadpleegd (F.A.Q.)?\n
-    - U beleefd en gevoelzaam communiceert?\n\n
-    Als u zich niet aan deze voorwaarden houdt, <b>kan de ontwikkelaar u niet helpen</b>.</string>
-
-    <string name="alert_contact_traces_msg">Voordat u log bestanden opstuurt, weet u zeker dat:\n
-	- U de laatste versie van Printoid gebruikt?\n 
-    - Heb je de tutorials opnieuw bekeken?\n
-    - Heeft u de veelgestelde vragen geraadpleegd (F.A.Q.)?\n
-	- U uit kunt leggen waarom u de logs opstuurt?\n
-	- U beleefd en gevoelzaam communiceert?\n\n
-    Als u zich niet aan deze voorwaarden houdt, <b>kan de ontwikkelaar u niet helpen</b>.</string>
 
     <string name="alert_contact_tutorials_label">Handleidingen</string>
     <string name="alert_contact_faq_label">F.A.Q.</string>
+
+    <string name="alert_contact_title">Neem contact op met de ontwikkelaar</string>
+
+    <string name="contact_conditions_title">Before contacting the developer, please ensure that:</string>
+    <string name="contact_condition_1">Printoid is up-to-date</string>
+    <string name="contact_condition_2">OctoPrint is up-to-date</string>
+    <string name="contact_condition_3">I have read the tutorials</string>
+    <string name="contact_condition_4">I have read the Frequently Asked Questions (F.A.Q.)</string>
+    <string name="contact_condition_5">I will be polite and courteous</string>
+
+    <string name="contact_form_title">Please write your message to Anthony, the developer of Printoid:</string>
+    <string name="contact_form_hint">Hello, I want to tell you that…</string>
 
 </resources>
