--- a/app/src/main/res/values-de/strings_contact.xml
+++ b/app/src/main/res/values-de/strings_contact.xml
@@ -20,14 +20,14 @@
 
     <string name="alert_contact_title">Softwareentwickler kontaktieren</string>
 
-    <string name="contact_conditions_title">Before contacting the developer, please ensure that:</string>
-    <string name="contact_condition_1">Printoid is up-to-date</string>
-    <string name="contact_condition_2">OctoPrint is up-to-date</string>
-    <string name="contact_condition_3">I have read the tutorials</string>
-    <string name="contact_condition_4">I have read the Frequently Asked Questions (F.A.Q.)</string>
-    <string name="contact_condition_5">I will be polite and courteous</string>
+    <string name="contact_conditions_title">Bevor Sie sich an den Entwickler wenden, stellen Sie dies sicher:</string>
+    <string name="contact_condition_1">Printoid ist aktuell</string>
+    <string name="contact_condition_2">OctoPrint ist aktuell</string>
+    <string name="contact_condition_3">Ich habe die Tutorials gelesen</string>
+    <string name="contact_condition_4">Ich habe die häufig gestellten Fragen gelesen (F.A.Q.)</string>
+    <string name="contact_condition_5">Ich werde höflich und höflich sein</string>
 
-    <string name="contact_form_title">Please write your message to Anthony, the developer of Printoid:</string>
-    <string name="contact_form_hint">Hello, I want to tell you that…</string>
+    <string name="contact_form_title">Bitte schreiben Sie Ihre Nachricht an Anthony, den Entwickler von Printoid:</string>
+    <string name="contact_form_hint">Hallo, das möchte ich dir sagen…</string>
 
 </resources>
